Add basics of cash-box detail
